--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -15,7 +15,8 @@ sources:
 expanded:
 - poo@campanha-principal
 - poo@bloco_b-modificadores-de-acesso
-tasks: {}
+tasks:
+  poo@chinela: '{rate:100, alone:10, study:60}'
 flags:
   quests: 0
   tracks: 0
@@ -23,4 +24,4 @@ flags:
   graph: 0
   xray: 0
 lang: py
-selected: poo@chinela
+selected: poo@camisa
