--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -15,6 +15,7 @@ sources:
 expanded:
 - poo@campanha-principal
 - poo@bloco_b-modificadores-de-acesso
+- poo@bloco_b-agregação-simples
 tasks:
   poo@chinela: '{rate:100, alone:10, study:60}'
   poo@camisa: '{rate:100, alone:10, study:50}'
@@ -26,4 +27,4 @@ flags:
   graph: 0
   xray: 0
 lang: py
-selected: poo@roupa
+selected: poo@motoca
