--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -12,7 +12,7 @@ sources:
   type: remote
   branch: master
   cache_path: /workspaces/poo-rc-bloco-b-vnogueiraa47/myrep/.tko/cache/poo.md
-  cache_timestamp: '2025-10-28 00:00:11'
+  cache_timestamp: '2025-10-28 03:48:46'
   filters:
   - acesso
   - simples
@@ -24,11 +24,12 @@ tasks:
   poo@chinela: '{rate:100, alone:10, study:60}'
   poo@camisa: '{rate:100, alone:10, study:50}'
   poo@roupa: '{rate:100, human:sim, alone:10, study:48}'
+  poo@motouber: '{rate:100, iagen:sim, guide:sim, alone:10, study:180}'
 flags:
   quests: 0
   tracks: 0
   tasks: 0
-  graph: 0
+  graph: 1
   xray: 0
 lang: py
 selected: poo@motouber
