--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -12,7 +12,7 @@ sources:
   type: remote
   branch: master
   cache_path: /workspaces/poo-rc-bloco-b-vnogueiraa47/myrep/.tko/cache/poo.md
-  cache_timestamp: '2025-10-28 03:48:46'
+  cache_timestamp: '2025-10-28 12:21:48'
   filters:
   - acesso
   - simples
@@ -24,6 +24,8 @@ tasks:
   poo@chinela: '{rate:100, alone:10, study:60}'
   poo@camisa: '{rate:100, alone:10, study:50}'
   poo@roupa: '{rate:100, human:sim, alone:10, study:48}'
+  poo@motoca: '{rate:100, alone:10, study:120}'
+  poo@grafite: '{rate:100, alone:10, study:180}'
   poo@motouber: '{rate:100, iagen:sim, guide:sim, alone:10, study:180}'
 flags:
   quests: 0
@@ -32,4 +34,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@motouber
+selected: poo@motoca
